# descartes-builder

./: .gitignore  .gitmodules  CITATION.cff  CMakeCache_ref.txt  Dockerfile  Makefile  PATCH  README.Docker.md  README.md  msg_box.patch
.github/workflows/: cmake_build.yml  linuxos-installer.yml  macos-installer.yml  winos-installer.yml
app/: .gitignore  CMD  CMakeLists.txt  main.cpp  patch  windows_toolchain.cmake
app/examples/: magnetic-bearing.dcb  pipe-deformation.dag
app/examples/tests/: test_propagation.dcb
app/include/: logHandler.hpp  log_manager.hpp  temp.hpp
app/include/data/: block_manager.hpp  constants.hpp  custom_graph.hpp  parameter_utils.hpp  settings.hpp  tab_components.hpp  tab_manager.hpp  yml_parser.hpp
app/include/engine/: abstract_engine.hpp  engine_starter.hpp  kedro.hpp
app/include/ui/: bottom_panel.hpp  graphics_scene_tab_widget.hpp  log_panel.hpp  main_window.hpp  model_registry.hpp  output_panel.hpp
app/include/ui/models/: AdditionModel.hpp  DecimalData.hpp  SubtractionModel.hpp  coder_model.hpp  coder_models.hpp  composer_models.hpp  data_models.hpp  fdf_block_model.hpp  function_names.hpp  io_models.hpp  nodes.hpp  processor_model.hpp  processor_models.hpp  test_model.hpp  trainer_model.hpp  trainer_models.hpp  uid_manager.hpp
app/include/ui/side_bar_widgets/: blocks.hpp  charts.hpp  information.hpp  menu.hpp  settings.hpp
app/resources/: resources.qrc  style.qss  tool_icon.rc  tool_logo.icns
app/resources/kedro/: kedro.qrc
app/resources/python/: python.qrc  test.py
app/scripts/: new.sh
app/src/: log_manager.cpp  temp.cpp
app/src/data/: block_manager.cpp  constants.hpp  custom_graph.cpp  settings.cpp  tab_components.cpp  tab_manager.cpp
app/src/engine/: engine_starter.cpp  kedro.cpp
app/src/ui/: bottom_panel.cpp  graphics_scene_tab_widget.cpp  log_panel.cpp  main_window.cpp  main_window.hpp  output_panel.cpp
app/src/ui/models/: MathOperationDataModel.cpp  NumberDisplayDataModel.cpp  NumberSourceDataModel.cpp  coder_model.cpp  coder_models.cpp  composer_models.cpp  data_models.cpp  fdf_block_model.cpp  io_models.cpp  nodes.cpp  processor_model.cpp  processor_models.cpp  test_model.cpp  trainer_model.cpp  trainer_models.cpp  uid_manager.cpp
app/src/ui/models/examples/: MathOperationDataModel.cpp  NumberDisplayDataModel.cpp  NumberSourceDataModel.cpp
app/src/ui/side_bar_widgets/: blocks.cpp  charts.cpp  information.cpp  menu.cpp  settings.cpp
app/tests/: main.cpp  test_add.cpp  test_examples.cpp  test_main_window.cpp  test_uidmanager.cpp
app/tests/results/: pipe-deformation-test-expected-score.yml  pipe-deformation-train-expected-score.yml
docs/: BUILDER_DOC.tex  Makefile  boxes.tex  cite.bib  developer.tex  macros.tex  proc_tab.tex
examples/private/: magnetic-bearing-train-test.dcb  magnetic-bearing-train.dcb
examples/tests/: test_propagation.dcb
install/: setup_python_win.bat  win_installer.iss
install/linux/: setup_appdir.sh  setup_appimage.sh  setup_python.sh
install/mac/: README.md  embed_python.sh  setup_python.sh
install/windows/: README.md  setup_python_win.bat  win_installer.iss
ui/PyFlow/UI/Themes/: Dark.json
